--- a/components/blockquote/blockquote.less
+++ b/components/blockquote/blockquote.less
@@ -13,7 +13,7 @@
 
   /* NOTE: LESS isn't processing HSL values stored as CSS variables (from variables.less) here */
   background-color: hsl(0, 0%, 95%);
-  border-radius:    var(--border-radius);
+  border-radius:    var(--message-border-radius);
   box-shadow:       0 0 0 0.075em hsl(0, 0%, 75%);
   color:            hsl(0, 0%, 20%);
   padding:          var(--message-padding);
