--- a/components/button/button.less
+++ b/components/button/button.less
@@ -11,8 +11,8 @@
 .button {
 
   background-color: hsl(0, 0%, 85%);
-  border-radius:    var(--border-radius);
-  padding:          0.5em 1em;
+  border-radius:    var(--text-border-radius);
+  padding:          var(--text-padding-lg);
   white-space:      nowrap;
 
   // NB: This declaration must precede the color declarations
