--- a/components/card/card.less
+++ b/components/card/card.less
@@ -15,23 +15,23 @@
     0 0 0 0.075em var(--border-color),
     0 0.075em 0.225em 0 var(--border-color),
     0 0.225em 0 0 var(--accent-color);
-  border-radius:    var(--border-radius);
-  margin:           1em;
+  border-radius:    var(--text-border-radius);
+  margin:           var(--space);
   text-align:       center;
 
   .content {
     flex-grow: 1;
-    padding:   1em;
+    padding:   var(--space);
   }
 
   h2 {
-    font-size: 2em;
+    font-size: var(--text-xl);
   }
 
   .icon {
-    height: 3.5rem;
-    margin: 1rem;
-    width:  3.5rem;
+    height: var(--space-xl);
+    margin: var(--space);
+    width:  var(--space-xl);
   }
 
 }
