--- a/components/interlinear/interlinear.less
+++ b/components/interlinear/interlinear.less
@@ -7,9 +7,9 @@
 // Styleguide Components.interlinear
 .igl {
 
-  --igl-indent:             2.5em;
-  --igl-horizontal-spacing: 1.5em;
-  --igl-vertical-spacing:   0.25em;
+  --igl-indent:             var(--space-lg);
+  --igl-horizontal-spacing: var(--space-md);
+  --igl-vertical-spacing:   var(--space-xxxs);
 
   display:     block;
   font-family: var(--font-unicode);
