--- a/components/message/message.less
+++ b/components/message/message.less
@@ -19,6 +19,13 @@
   // Styleguide Components.message.message-border-lightness
   --message-border-lightness: 85%;
 
+  // --message-border-radius
+  //
+  // The border radius to use for messages
+  //
+  // Styleguide Components.message.message-border-radius
+  --message-border-radius: var(--text-border-radius);
+
   // --message-border-saturation
   //
   // The HSL saturation to use for message borders
