--- a/components/paragraph/paragraph.less
+++ b/components/paragraph/paragraph.less
@@ -8,6 +8,6 @@
 //
 // Styleguide Components.paragraph
 .hanging {
-  margin-left: 1em;
-  text-indent: -1em;
+  margin-left: var(--space);
+  text-indent: calc(var(--space) * -1);
 }
