--- a/components/warning/warning.less
+++ b/components/warning/warning.less
@@ -14,7 +14,7 @@
   --warning-hue: 35;
 
   background-color: hsl(var(--warning-hue), 100%, var(--message-background-lightness));
-  border-radius:    var(--border-radius);
+  border-radius:    var(--message-border-radius);
   box-shadow:
     0 0 0 0.075em
     hsl(var(--warning-hue), var(--message-border-saturation), var(--message-border-lightness));
