--- a/globals/colors.less
+++ b/globals/colors.less
@@ -29,6 +29,14 @@
   --purple:     hsl(var(--purple-hue), 100%, var(--color-lightness));
   --darkPurple: hsl(var(--purple-hue), 100%, calc(var(--color-lightness) - 10%));
 
+  // --red
+  //
+  // $red - #CC4949; red
+  //
+  // Styleguide Colors.red
+  --red-hue: 0;
+  --red:     hsl(var(--red-hue), 56%, calc(var(--color-lightness) + 9%);
+
   // --wugblue
   //
   // The color of the DLx wug
