FIX: missing close parenthesis

--- a/globals/colors.less
+++ b/globals/colors.less
@@ -35,7 +35,7 @@
   //
   // Styleguide Colors.red
   --red-hue: 0;
-  --red:     hsl(var(--red-hue), 56%, calc(var(--color-lightness) + 9%);
+  --red:     hsl(var(--red-hue), 56%, calc(var(--color-lightness) + 9%));
 
   // --wugblue
   //
