--- a/components/components.less
+++ b/components/components.less
@@ -22,5 +22,6 @@
 @import './phonemic/phonemic.less';
 @import './phonetic/phonetic.less';
 @import './transcription/transcription.less';
+@import './transcription/translation.less';
 @import './skip-link/skip-link.less';
 @import './warning/warning.less';
