--- a/components/translation/translation.less
+++ b/components/translation/translation.less
@@ -1,6 +1,6 @@
 // Translation
 //
-// Used to add single qoutation marks (',') around a translation.
+// Used to add single quotation marks around a translation.
 //
 // Markup: translation.hbs
 //
