minor fixes to .document and .examples

--- a/components/components.less
+++ b/components/components.less
@@ -7,13 +7,14 @@
 // Styleguide Components
 
 @import './abbreviation/abbreviation.less';
-@import './article/article.less';
 @import './blockquote/blockquote.less';
 @import './bulleted/bulleted.less';
 @import './button/button.less';
 @import './card/card.less';
 @import './cite/cite.less';
 @import './definition/definition.less';
+@import './document/document.less';
+@import './examples/examples.less';
 @import './interlinear/interlinear.less';
 @import './link/link.less';
 @import './numbered/numbered.less';
