--- a/components/document/document.less
+++ b/components/document/document.less
@@ -8,7 +8,7 @@
 .ling-document {
 
   counter-reset: examples;
-  font-family:   var(--font-unicode)
+  font-family:   var(--font-unicode);
 
   // Document Header
   //
