--- a/components/examples/examples.less
+++ b/components/examples/examples.less
@@ -52,9 +52,15 @@
   //
   // Styleguide Components.examples.subexamples
   .subexamples {
+
     margin-left:         1.25em;
     list-style-position: outside;
     list-style-type:     lower-alpha;
+
+    li {
+      display: list-item;
+    }
+
   }
 
 }
