NEW: .ling-document > .caption

--- a/components/document/document.less
+++ b/components/document/document.less
@@ -10,6 +10,15 @@
   counter-reset: examples;
   font-family:   var(--font-unicode);
 
+  // Captions
+  //
+  // Captions for figures and tables.
+  //
+  // Styleguide Components.document.caption
+  .caption {
+    padding: 0.25em 0.5em;
+  }
+
   // Document Header
   //
   // The header of the document (e.g. chapter or article title and author information)
