CHANGE: improve interlinear gloss

--- a/components/components.less
+++ b/components/components.less
@@ -14,6 +14,7 @@
 @import './cite/cite.less';
 @import './definition/definition.less';
 @import './document/document.less';
+@import './example/example.less';
 @import './examples/examples.less';
 @import './interlinear/interlinear.less';
 @import './link/link.less';
