--- a/components/interlinear/interlinear.less
+++ b/components/interlinear/interlinear.less
@@ -1,19 +1,44 @@
+@import 'components/transcription/transcription.less';
+@import 'components/translation/translation.less';
+
 // Interlinear Gloss
 //
-// An interlinear glossed example or utterance.
+// An interlinear glossed example or utterance. In addition to transcription (`<p class=txn>`) and translation (`<p class=tln>`) lines, you can choose to add analysis lines grouped by words (`<ol class=words>`) or morphemes (`<ol class=morphemes>`).
 //
 // Markup: interlinear.hbs
 //
 // Styleguide Components.interlinear
 .igl {
 
-  --igl-indent:             var(--space-lg);
+  // --igl-indent
+  //
+  // The amount to indent the words / morpheme breakdowns. The transcription and translation lines (the first and last lines) will be left unindented.
+  //
+  // Styleguide Components.interlinear.igl-indent
+  --igl-indent: 0;
+
+  // --igl-horizontal-spacing
+  //
+  // The amount of space to place between words / morphemes in the analysis lines.
+  //
+  // Styleguide Components.interlinear.igl-horizontal-spacing
   --igl-horizontal-spacing: var(--space-md);
+
+  // --igl-vertical-spacing
+  //
+  // The amount of space to place above and below the words / morphemes in the analysis lines.
+  //
+  // Styleguide Components.interlinear.igl-vertical-spacing
   --igl-vertical-spacing:   var(--space-xxxs);
 
   display:     block;
   font-family: var(--font-unicode);
   line-height: 1.5;
+
+  p {
+    margin:  0;
+    padding: 0;
+  }
 
   &::after {
     clear:   both;
@@ -23,6 +48,22 @@
     display: block;
   }
 
+  // Grammatical Gloss
+  //
+  // The `<abbr>` tag is used for grammatical glosses, in small caps.
+  //
+  // Styleguide Components.interlinear.gloss
+  abbr {
+    cursor:          help;
+    font-variant:    small-caps;
+    text-decoration: none; /* Removes user agent styling of abbr elements */
+  }
+
+  // Example Emphasis
+  //
+  // You can emphasize any portion of an interlinear example with the `<em>` tag.
+  //
+  // Styleguide Components.interlinear.emphasis
   em {
     // The --em-color is not set by the .igl class
     // Users can set this externally
@@ -32,70 +73,25 @@
     font-weight:  bold;
   }
 
-  .gl {
-    cursor:          help;
-    font-variant:    small-caps;
-    text-decoration: none; /* Removes user agent styling of abbr elements */
-  }
-
-  .source {
-
-    float:  right;
-    margin: 0;
-
-    &::before {
-      content: '(';
-    }
-
-    &::after {
-      content: ')';
-    }
-
+  li + li {
+    margin-left: var(--igl-horizontal-spacing);
   }
 
   .tln {
-
-    float:  left;
-    margin: 0;
-
-    &::before {
-      content: '‘';
-    }
-
-    &::after {
-      content: '’';
-    }
-
+    .translation;
   }
 
   .txn {
-    margin:        0;
+    .transcription;
     margin-bottom: var(--igl-vertical-spacing);
   }
 
+  .morpheme,
   .word {
-
     margin-bottom: var(--igl-vertical-spacing);
-
-    &:first-child {
-      // stylelint-disable-next-line function-calc-no-invalid
-      margin-left: calc(var(--igl-indent) * -1);
-    }
-
-    &:not(:last-child) {
-      padding-right: var(--igl-horizontal-spacing);
-    }
-
   }
 
-  .word-gl {
-    margin: 0;
-  }
-
-  .word-txn {
-    margin: 0;
-  }
-
+  .morphemes,
   .words {
     display:     flex;
     flex-flow:   row wrap;
