--- a/components/phonemic/phonemic.less
+++ b/components/phonemic/phonemic.less
@@ -7,9 +7,9 @@
 // Markup: phonemic.hbs
 //
 // Styleguide Components.phonemic
-.phonemic {
+.phon {
 
-  .transcription;
+  .txn;
 
   &::before {
     content:       '/';
