--- a/components/orthographic/orthographic.hbs
+++ b/components/orthographic/orthographic.hbs
@@ -1,1 +1,1 @@
-<p>This is an example of a sentence with an <span class=orthographic>orthographic representation</span> of some text.</p>
+<p>This is an example of a sentence with an <span class=ortho>orthographic representation</span> of some text.</p>
