--- a/components/phonemic/phonemic.hbs
+++ b/components/phonemic/phonemic.hbs
@@ -1,1 +1,1 @@
-<p>This is an example of a <span class=phonemic>fənimɪk</span> representation of some data.</p>
+<p>This is an example of a <span class=phon>fənimɪk</span> representation of some data.</p>
