--- a/components/phonetic/phonetic.less
+++ b/components/phonetic/phonetic.less
@@ -7,9 +7,9 @@
 // Markup: phonetic.hbs
 //
 // Styleguide Components.phonetic
-.phonetic {
+.fon {
 
-  .transcription;
+  .txn;
 
   &::before {
     content:      '[';
