--- a/components/transcription/transcription.less
+++ b/components/transcription/transcription.less
@@ -5,7 +5,7 @@
 // Markup: transcription.hbs
 //
 // Styleguide Components.transcription
-.transcription {
+.txn {
 
   // --transcription-padding
   //
