--- a/components/transcription/transcription.hbs
+++ b/components/transcription/transcription.hbs
@@ -1,1 +1,1 @@
-<p>This shows an example of a <span class=transcription>transcription in a Unicode font</span>.</p>
+<p>This shows an example of a <span class=txn>transcription in a Unicode font</span>.</p>
