--- a/components/phonetic/phonetic.hbs
+++ b/components/phonetic/phonetic.hbs
@@ -1,1 +1,1 @@
-<p>This is an example of a <span class=phonetic>fəˈnɛtik̚</span> representation of some data.</p>
+<p>This is an example of a <span class=fon>fəˈnɛtik̚</span> representation of some data.</p>
