proper import of transcriptions

--- a/components/phonemic/phonemic.css
+++ b/components/phonemic/phonemic.css
@@ -1,1 +1,1 @@
-.transcription{--transcription-padding:0.15em;font-family:var(--font-unicode)}.phonemic{--transcription-padding:0.15em;font-family:var(--font-unicode)}.phonemic::before{content:'/';padding-right:var(--transcription-padding)}.phonemic::after{content:'/';padding-left:var(--transcription-padding)}
+.txn{--transcription-padding:0.15em;font-family:var(--font-unicode)}.phon{--transcription-padding:0.15em;font-family:var(--font-unicode)}.phon::before{content:'/';padding-right:var(--transcription-padding)}.phon::after{content:'/';padding-left:var(--transcription-padding)}
