--- a/components/transcription/transcription.css
+++ b/components/transcription/transcription.css
@@ -1,1 +1,1 @@
-.transcription{--transcription-padding:0.15em;font-family:var(--font-unicode)}
+.txn{--transcription-padding:0.15em;font-family:var(--font-unicode)}
