--- a/components/phonetic/phonetic.css
+++ b/components/phonetic/phonetic.css
@@ -1,1 +1,1 @@
-.transcription{--transcription-padding:0.15em;font-family:var(--font-unicode)}.phonetic{--transcription-padding:0.15em;font-family:var(--font-unicode)}.phonetic::before{content:'[';padding-right:var(--transcription-padding)}.phonetic::after{content:']';padding-left:var(--transcription-padding)}
+.txn{--transcription-padding:0.15em;font-family:var(--font-unicode)}.fon{--transcription-padding:0.15em;font-family:var(--font-unicode)}.fon::before{content:'[';padding-right:var(--transcription-padding)}.fon::after{content:']';padding-left:var(--transcription-padding)}
