CHANGE: shorten class names (#148)
closes #148

--- a/components/orthographic/orthographic.less
+++ b/components/orthographic/orthographic.less
@@ -7,9 +7,9 @@
 // Markup: orthographic.hbs
 //
 // Styleguide Components.orthographic
-.orthographic {
+.ortho {
 
-  .transcription;
+  .txn;
 
   &::before {
     content:       '⟨';
