--- a/components/translation/translation.hbs
+++ b/components/translation/translation.hbs
@@ -1,1 +1,1 @@
-<p>This shows an example of a <span class=translation>translation in a Unicode font</span>.</p>
+<p>This shows an example of a <span class=tln>translation</span> in the same font as the surrounding text.</p>
