--- a/components/transcription/transcription.less
+++ b/components/transcription/transcription.less
@@ -11,7 +11,7 @@
   //
   // Padding to use on either side of the brackets around transcriptions (`//`, `[]`, and `<>`)
   //
-  // Styleguide Variables.padding-ipa
+  // Styleguide Components.transcription.transcription-padding
   --transcription-padding: 0.15em;
 
   font-family: var(--font-unicode);
