--- a/components/abbreviation/abbreviation.less
+++ b/components/abbreviation/abbreviation.less
@@ -1,11 +1,11 @@
 // Abbreviation
 //
-// The `<abbr>` element is used for inline abbreviations
+// The `<abbr>` element is used for inline abbreviations.
 //
 // Markup: abbreviation.hbs
 //
 // Styleguide Components.abbreviation
-.abbreviation {
+.abbr {
   cursor:          help;
   text-decoration: dotted underline;
 }
