--- a/components/button/button.less
+++ b/components/button/button.less
@@ -14,7 +14,10 @@
 .button {
 
   background-color: hsl(0, 0%, 85%);
+  border:           none;
   border-radius:    var(--text-border-radius);
+  font:             inherit;
+  padding:          0;
   padding:          var(--text-padding-lg);
   white-space:      nowrap;
 
