--- a/components/card/card.less
+++ b/components/card/card.less
@@ -1,6 +1,6 @@
 // Card
 //
-// A card view
+// A card view.
 //
 // Markup: card.hbs
 //
@@ -9,6 +9,14 @@
 
   --accent-color:  var(--blue);
   --border-color:  hsl(0, 0%, 85%);
+
+  // remove link styling
+  a, a:visited, a:hover, a:active {
+    background-color: transparent;
+    background-image: none;
+    color:            inherit;
+    text-decoration:  none;
+  }
 
   background-color: white;
   box-shadow:
