--- a/components/examples/examples.less
+++ b/components/examples/examples.less
@@ -17,6 +17,16 @@
   list-style-position: outside;
   list-style-type:     none;
 
+  ol {
+    margin:  0;
+    padding: 0;
+  }
+
+  p {
+    margin:  0;
+    padding: 0;
+  }
+
   // Subexamples
   //
   // Examples may have subexamples consisting of an embedded ordered list.
