--- a/kss/patterns.less
+++ b/kss/patterns.less
@@ -31,3 +31,7 @@
 #kssref-components-examples .kss-modifiers__example {
   font-family: var(--font-unicode);
 }
+
+#kssref-components-examples .kss-modifiers__example .txn {
+  font-style: italic;
+}
