--- a/components/definition/definition.hbs
+++ b/components/definition/definition.hbs
@@ -1,1 +1,1 @@
-<p><dfn class=definition>Digital Linguistics</dfn> (<abbr class=abbr title='Digital Linguistics'>DLx</abbr>) is the science of digital data management for linguistics, including the digital storage, representation, manipulation, and dissemination of linguistic data.</p>
+<p><dfn class=dfn>Digital Linguistics</dfn> (<abbr class=abbr title='Digital Linguistics'>DLx</abbr>) is the science of digital data management for linguistics, including the digital storage, representation, manipulation, and dissemination of linguistic data.</p>
