--- a/components/examples/examples.hbs
+++ b/components/examples/examples.hbs
@@ -2,15 +2,15 @@
 
   <li class=ex>
     <ol class=subexamples>
-      <li><p><span class=transcription>pāpaehcen</span> <span class=translation>he, she, it (an.) falls</span> (AI)</p></li>
-      <li><p><span class=transcription>pāpaehnaen</span> <span clas=translation>it (inan.) falls</span> (II)</p></li>
+      <li><p><span class=txn>pāpaehcen</span> <span class=tln>he, she, it (an.) falls</span> (AI)</p></li>
+      <li><p><span class=txn>pāpaehnaen</span> <span clas=translation>it (inan.) falls</span> (II)</p></li>
     </ol>
   </li>
 
   <li class=ex>
     <ol class=subexamples>
-      <li><p><span class=transcription>na͞ewa͞ew</span> <span class=translation>s/he sees him, her, it (an.)</span> (TA)</p></li>
-      <li><p><span class=transcription>na͞emwah</span> <span class=translation>s/he sees it (inan.)</span> (TI)</p></li>
+      <li><p><span class=txn>na͞ewa͞ew</span> <span class=tln>s/he sees him, her, it (an.)</span> (TA)</p></li>
+      <li><p><span class=txn>na͞emwah</span> <span class=tln>s/he sees it (inan.)</span> (TI)</p></li>
     </ol>
   </li>
 
@@ -20,36 +20,34 @@
   The following examples should continue numbering from the previous examples:
 </p>
 
-<br>
-
 <ol class=examples>
 
   <li class=ex>
-    <p><span class=transcription>kōhkawaew</span> (AI) <span class=translation>it (animate; for example, a wagon or canoe) tips over</span></p>
-    <p><strong>Stem:</strong> <span class=transcription>kōhkawae‑</span> [initial <span class=transcription>kōhkā‑</span> <span class=translation>tip over</span> + <span class=transcription>‑āwa͞e</span> <span class=translation>AI final</span>]</p>
-    <p><strong>Secondary final:</strong> <span class=transcription>‑makat</span> <span class=translation>II verb</span></p>
-    <p><strong>New word:</strong> <span class=transcription>kōhkawaemakat</span> (II) <span class=translation>it tips over</span></p>
+    <p><span class=txn>kōhkawaew</span> (AI) <span class=tln>it (animate; for example, a wagon or canoe) tips over</span></p>
+    <p><strong>Stem:</strong> <span class=txn>kōhkawae‑</span> [initial <span class=txn>kōhkā‑</span> <span class=tln>tip over</span> + <span class=txn>‑āwa͞e</span> <span class=tln>AI final</span>]</p>
+    <p><strong>Secondary final:</strong> <span class=txn>‑makat</span> <span class=tln>II verb</span></p>
+    <p><strong>New word:</strong> <span class=txn>kōhkawaemakat</span> (II) <span class=tln>it tips over</span></p>
   </li>
 
   <li class=ex>
-    <p><span class=transcription>cēkataham</span> (TI) <span class=translation>he or she sweeps it clear, cleans it with a broom</span></p>
-    <p><strong>Stem:</strong> <span class=transcription>cēkatah‑</span> [initial <span class=transcription>cēk‑</span> <span class=translation>near, next to</span> (?) + <span class=transcription>‑atah</span> <span class=translation>by stick</span>]</p>
-    <p><strong>Secondary final:</strong> <span class=transcription>‑ka͞e</span> <span class=translation>AI verb; indefinite action</span></p>
-    <p><strong>New word:</strong> <span class=transcription>cēkatahekaew</span> (AI1) <span class=translation>he or she sweeps</span></p>
+    <p><span class=txn>cēkataham</span> (TI) <span class=tln>he or she sweeps it clear, cleans it with a broom</span></p>
+    <p><strong>Stem:</strong> <span class=txn>cēkatah‑</span> [initial <span class=txn>cēk‑</span> <span class=tln>near, next to</span> (?) + <span class=txn>‑atah</span> <span class=tln>by stick</span>]</p>
+    <p><strong>Secondary final:</strong> <span class=txn>‑ka͞e</span> <span class=tln>AI verb; indefinite action</span></p>
+    <p><strong>New word:</strong> <span class=txn>cēkatahekaew</span> (AI1) <span class=tln>he or she sweeps</span></p>
   </li>
 
   <li class=ex>
-    <p><span class=transcription>wāqnenam</span> (TI) <span class=translation>he or she throws light on it, lights it up</span></p>
-    <p><strong>Stem:</strong> <span class=transcription>wāqnen‑</span> [initial <span class=transcription>wāqN‑</span> <span class=translation>light</span> + <span class=transcription>‑aen</span> <span class=translation>by hand</span>]</p>
-    <p><strong>Secondary final:</strong> <span class=transcription>‑kan</span> <span class=translation>N; instrument, product, place, etc.</span></p>
-    <p><strong>New word:</strong> <span class=transcription>wāqnenekan</span> (N) <span class=translation>lamp, candle</span></p>
+    <p><span class=txn>wāqnenam</span> (TI) <span class=tln>he or she throws light on it, lights it up</span></p>
+    <p><strong>Stem:</strong> <span class=txn>wāqnen‑</span> [initial <span class=txn>wāqN‑</span> <span class=tln>light</span> + <span class=txn>‑aen</span> <span class=tln>by hand</span>]</p>
+    <p><strong>Secondary final:</strong> <span class=txn>‑kan</span> <span class=tln>N; instrument, product, place, etc.</span></p>
+    <p><strong>New word:</strong> <span class=txn>wāqnenekan</span> (N) <span class=tln>lamp, candle</span></p>
   </li>
 
   <li class=ex>
-    <p><span class=transcription>sūniyan</span> (N) <span class=translation>money</span></p>
-    <p><strong>Stem:</strong> <span class=transcription>sūniyan‑</span> [initial <span class=transcription>sōni‑</span> <span class=translation>silver</span> + <span class=transcription>‑ān</span> <span class=translation>N final</span> (?)]</p>
-    <p><strong>Secondary final:</strong> <span class=transcription>‑ikamekw</span> <span class=translation>N; house, building</span></p>
-    <p><strong>New word:</strong> <span class=transcription>sūniyanikamek</span> (N) <span class=translation>bank</span></p>
+    <p><span class=txn>sūniyan</span> (N) <span class=tln>money</span></p>
+    <p><strong>Stem:</strong> <span class=txn>sūniyan‑</span> [initial <span class=txn>sōni‑</span> <span class=tln>silver</span> + <span class=txn>‑ān</span> <span class=tln>N final</span> (?)]</p>
+    <p><strong>Secondary final:</strong> <span class=txn>‑ikamekw</span> <span class=tln>N; house, building</span></p>
+    <p><strong>New word:</strong> <span class=txn>sūniyanikamek</span> (N) <span class=tln>bank</span></p>
   </li>
 
 </ol>
