--- a/components/link/link.less
+++ b/components/link/link.less
@@ -48,7 +48,8 @@
 .link {
 
   &:link {
-    color: var(--blue);
+    color:           var(--blue);
+    text-decoration: none;
   }
 
   &:visited {
