Add green color

--- a/globals/colors.less
+++ b/globals/colors.less
@@ -20,6 +20,14 @@
   --blue:           hsl(var(--blue-hue), 100%, var(--color-lightness));
   --lightBlue:      hsl(var(--blue-hue), 100%, calc(var(--color-lightness) + 10%));
 
+  // --green
+  //
+  // $green   - #00E890; green
+  //
+  // Styleguide Colors.green
+  --green-hue: 157;
+  --green:     hsl(var(--green-hue), 100%, var(--color-lightness));
+
   // --purple
   //
   // $purple - #6B00E6; purple
