--- a/globals/colors.less
+++ b/globals/colors.less
@@ -20,9 +20,17 @@
   --blue:           hsl(var(--blue-hue), 100%, var(--color-lightness));
   --lightBlue:      hsl(var(--blue-hue), 100%, calc(var(--color-lightness) + 10%));
 
+  // --gray
+  //
+  // $gray - #757575
+  //
+  // Styleguide Colors.gray
+  --gray-hue: 0;
+  --gray:     hsl(var(--gray-hue), 0%, calc(var(--color-lightness) + 1%));
+
   // --green
   //
-  // $green   - #00E890; green
+  // $green - #00E890; green
   //
   // Styleguide Colors.green
   --green-hue: 157;
