Add green button

--- a/components/button/button.less
+++ b/components/button/button.less
@@ -7,6 +7,7 @@
 // Markup: button.hbs
 //
 // .blue   - Blue button
+// .green  - Green button
 // .purple - Purple button
 // .red    - Red button
 //
@@ -28,6 +29,11 @@
 
   &.blue {
     background-color: hsl(var(--blue-hue), 100%, var(--color-lightness));
+    color:            white;
+  }
+
+  &.green {
+    background-color: hsl(var(--green-hue), 100%, var(--color-lightness));
     color:            white;
   }
 
