Add larger type scales

--- a/fonts/fonts.less
+++ b/fonts/fonts.less
@@ -58,11 +58,13 @@
   --text-scale-ratio:   1.2;
 
   // Type scale
-  --text-xs: calc(1em / var(--text-scale-ratio) / var(--text-scale-ratio));
-  --text-sm: calc(1em / var(--text-scale-ratio));
-  --text-md: calc(1em * var(--text-scale-ratio));
-  --text-lg: calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio));
-  --text-xl: calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio));
+  --text-xs:   calc(1em / var(--text-scale-ratio) / var(--text-scale-ratio));
+  --text-sm:   calc(1em / var(--text-scale-ratio));
+  --text-md:   calc(1em * var(--text-scale-ratio));
+  --text-lg:   calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio));
+  --text-xl:   calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio));
+  --text-xxl:  calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio));
+  --text-xxxl: calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio));
 
   // Padding
   --text-padding:    0.25em 0.5em;
