relocate spacing variables

--- a/globals/variables.less
+++ b/globals/variables.less
@@ -15,4 +15,14 @@
   // Styleguide Variables.measure
   --measure: 60em;
 
+  // Spacing
+  --space-xxxs: 0.25em;
+  --space-xxs:  0.375em;
+  --space-xs:   0.5em;
+  --space-sm:   0.75em;
+  --space:      1em;
+  --space-md:   1.25em;
+  --space-lg:   2em;
+  --space-xl:   3.25em;
+
 }
