--- a/globals/colors.less
+++ b/globals/colors.less
@@ -26,15 +26,15 @@
   //
   // Styleguide Colors.gray
   --gray-hue: 0;
-  --gray:     hsl(var(--gray-hue), 0%, calc(var(--color-lightness) + 1%));
+  --gray:     hsl(var(--gray-hue), 0%, var(--color-lightness));
 
   // --green
   //
-  // $green - #00E890; green
+  // $green      - #00B353; green
   //
   // Styleguide Colors.green
-  --green-hue: 157;
-  --green:     hsl(var(--green-hue), 100%, var(--color-lightness));
+  --green-hue:  calc(var(--blue-hue) - 60);
+  --green:      hsl(var(--green-hue), 100%, calc(var(--color-lightness) - 10%));
 
   // --purple
   //
