NEW: green and gray colors (#175, #176)
closes #175
closes #176

--- a/globals/colors.less
+++ b/globals/colors.less
@@ -20,6 +20,22 @@
   --blue:           hsl(var(--blue-hue), 100%, var(--color-lightness));
   --lightBlue:      hsl(var(--blue-hue), 100%, calc(var(--color-lightness) + 10%));
 
+  // --gray
+  //
+  // $gray - #757575
+  //
+  // Styleguide Colors.gray
+  --gray-hue: 0;
+  --gray:     hsl(var(--gray-hue), 0%, var(--color-lightness));
+
+  // --green
+  //
+  // $green      - #00B353; green
+  //
+  // Styleguide Colors.green
+  --green-hue:  calc(var(--blue-hue) - 60);
+  --green:      hsl(var(--green-hue), 100%, calc(var(--color-lightness) - 10%));
+
   // --purple
   //
   // $purple - #6B00E6; purple
