--- a/globals/variables.less
+++ b/globals/variables.less
@@ -16,6 +16,10 @@
   --measure: 60em;
 
   // Spacing
+  //
+  // Variables for spacing
+  //
+  // Styleguide Variables.spacing
 
   // --space-xxxs
   //
