CHANGE: move font-related variables to fonts.less (#169, #170)
closes #169
closes #170

--- a/globals/variables.less
+++ b/globals/variables.less
@@ -15,4 +15,66 @@
   // Styleguide Variables.measure
   --measure: 60em;
 
+  // Spacing
+  //
+  // Variables for spacing
+  //
+  // Styleguide Variables.spacing
+
+  // --space-xxxs
+  //
+  // XXXS spacing
+  //
+  // Styleguide Variables.spacing.space-xxxs
+  --space-xxxs: 0.25em;
+
+  // --space-xxs
+  //
+  // XXS spacing
+  //
+  // Styleguide Variables.spacing.space-xxs
+  --space-xxs:  0.375em;
+
+  // --space-xs
+  //
+  // Extra Small Spacing
+  //
+  // Styleguide Variables.spacing.space-xs
+  --space-xs:   0.5em;
+
+  // --space-sm
+  //
+  // Small Spacing
+  //
+  // Styleguide Variables.spacing.space-sm
+  --space-sm:   0.75em;
+
+  // --space
+  //
+  // Standard spacing. Equivalent to 1em.
+  //
+  // Styleguide Variables.spacing.space
+  --space:      1em;
+
+  // --space-md
+  //
+  // Medium Spacing
+  //
+  // Styleguide Variables.spacing.space-md
+  --space-md:   1.25em;
+
+  // --space-lg
+  //
+  // Large Spacing
+  //
+  // Styleguide Variables.spacing.space-lg
+  --space-lg:   2em;
+
+  // --space-xl
+  //
+  // Extra Large Spacing
+  //
+  // Styleguide Variables.spacing.space-xl
+  --space-xl:   3.25em;
+
 }
