--- a/kss/patterns.less
+++ b/kss/patterns.less
@@ -1,6 +1,7 @@
 @import '../fonts/fonts.less';
 @import '../globals/colors.less';
 @import '../components/components.less';
+@import '../globals/variables.less';
 
 .kss-modifiers__example {
   border-collapse: collapse;
