add fallbacks for spacing variables in interlinear.less

--- a/components/interlinear/interlinear.less
+++ b/components/interlinear/interlinear.less
@@ -22,6 +22,7 @@
   // The amount of space to place between words / morphemes in the analysis lines.
   //
   // Styleguide Components.interlinear.igl-horizontal-spacing
+  --igl-horizontal-spacing: 1.25em;
   --igl-horizontal-spacing: var(--space-md);
 
   // --igl-vertical-spacing
@@ -29,7 +30,8 @@
   // The amount of space to place above and below the words / morphemes in the analysis lines.
   //
   // Styleguide Components.interlinear.igl-vertical-spacing
-  --igl-vertical-spacing:   var(--space-xxxs);
+  --igl-vertical-spacing: 0.25em;
+  --igl-vertical-spacing: var(--space-xxxs);
 
   display:     block;
   font-family: var(--font-unicode);
