--- a/components/example/example.less
+++ b/components/example/example.less
@@ -15,6 +15,14 @@
     position:    absolute;
   }
 
+  &::after {
+    clear:   both;
+    content: '';
+    display: block;
+    height:  0;
+    width:   100%;
+  }
+
 }
 
 // Example Header
