Add &:active to button

--- a/components/button/button.less
+++ b/components/button/button.less
@@ -23,6 +23,10 @@
   white-space:      nowrap;
 
   // NB: This declaration must precede the color declarations
+  &:active {
+     outline: 0.1em dashed black;
+  }
+
   &:hover {
     background-color: hsl(0, 0%, 75%);
   }
