--- a/globals/variables.less
+++ b/globals/variables.less
@@ -33,48 +33,55 @@
   // XXS spacing
   //
   // Styleguide Variables.spacing.space-xxs
-  --space-xxs:  0.375em;
+  --space-xxs: 0.375em;
 
   // --space-xs
   //
   // Extra Small Spacing
   //
   // Styleguide Variables.spacing.space-xs
-  --space-xs:   0.5em;
+  --space-xs: 0.5em;
 
   // --space-sm
   //
   // Small Spacing
   //
   // Styleguide Variables.spacing.space-sm
-  --space-sm:   0.75em;
+  --space-sm: 0.75em;
 
   // --space
   //
   // Standard spacing. Equivalent to 1em.
   //
   // Styleguide Variables.spacing.space
-  --space:      1em;
+  --space: 1em;
 
   // --space-md
   //
   // Medium Spacing
   //
   // Styleguide Variables.spacing.space-md
-  --space-md:   1.25em;
+  --space-md: 1.25em;
 
   // --space-lg
   //
   // Large Spacing
   //
   // Styleguide Variables.spacing.space-lg
-  --space-lg:   2em;
+  --space-lg: 2em;
 
   // --space-xl
   //
   // Extra Large Spacing
   //
   // Styleguide Variables.spacing.space-xl
-  --space-xl:   3.25em;
+  --space-xl: 3.25em;
+  
+  // --space-xxl
+  //
+  // XXL Spacing
+  //
+  // Styleguide Variables.spacing.space-xxl
+  --space-xxl: 5em;
 
 }
