--- a/components/transcription/transcription.less
+++ b/components/transcription/transcription.less
@@ -1,3 +1,5 @@
+@import (reference) 'fonts/fonts.less';
+
 /*
 Transcription
 
@@ -9,13 +11,5 @@ Styleguide 1
 */
 .txn,
 .transcription {
-  font-family:
-    'Linux Libertine',
-    'Charis SIL',
-    'Gentium Plus',
-    'Doulos SIL',
-    'Source Serif Pro',
-    'Noto Serif',
-    'Times New Roman',
-    serif;
+  font-family: @font-unicode-serif;
 }
