--- a/components/components.less
+++ b/components/components.less
@@ -1,1 +1,13 @@
+// Components
+//
+// Styling for linguistic components.
+//
+// Weight: 2
+//
+// Styleguide components
+
+@import 'example/example.less';
+@import 'gloss/gloss.less';
+@import 'interlinear/interlinear.less';
 @import 'transcription/transcription.less';
+@import 'translation/translation.less';
