--- a/components/transcription/transcription.less
+++ b/components/transcription/transcription.less
@@ -1,15 +1,13 @@
-@import (reference) 'fonts/fonts.less';
+@import 'fonts/fonts.less';
 
-/*
-Transcription
-
-Any written representation of speech or sign.
-
-Markup: transcription.html
-
-Styleguide 1
-*/
+// Transcription
+//
+// Any written representation of speech or sign.
+//
+// Markup: transcription.html
+//
+// Styleguide components.transcription
 .txn,
 .transcription {
-  font-family: @font-unicode-serif;
+  font-family: var(--font-unicode-serif);
 }
