--- a/components/gloss/gloss.less
+++ b/components/gloss/gloss.less
@@ -2,6 +2,8 @@
 //
 // Grammatical glosses, displayed in small caps. Best practice is that grammatical glosses should be contained in `<abbr class=gl>` tags.
 //
+// Markup: gloss.html
+//
 // Styleguide components.gloss
 .gl, .gloss {
   font-variant:    small-caps;
