--- a/components/transcription/transcription.html
+++ b/components/transcription/transcription.html
@@ -1,1 +1,2 @@
-<p>The suffixes <span class=txn>‑s</span>, <span class=txn>‑ed</span>, and <span class=txn>‑ing</span> are all inflectional affixes.</p>
+<p><span class=txn>łééchąąʼí</span> <q>dog</q></p>
+<p><span class=txn>łį́į́ʼ</span> <q>pet</q></p>
