--- a/components/gloss/gloss.html
+++ b/components/gloss/gloss.html
@@ -1,1 +1,1 @@
-<p>In this text, the gloss <abbr class=gl title=pluractional>plact</abbr> is used to mean <span class=tln>pluractional</span>.</p>
+<p>In this text, the gloss <abbr class=gl title=pluractional>plact</abbr> is used to mean <q class=tln>pluractional</q>.</p>
