--- a/components/components.less
+++ b/components/components.less
@@ -7,7 +7,9 @@
 // Styleguide components
 
 @import 'example/example.less';
+@import 'examples/examples.less';
 @import 'gloss/gloss.less';
+@import 'inline/inline.less';
 @import 'interlinear/interlinear.less';
 @import 'transcription/transcription.less';
 @import 'translation/translation.less';
