--- a/components/inline/inline.less
+++ b/components/inline/inline.less
@@ -2,7 +2,7 @@
 
 // Inline Example
 //
-// Inline examples within prose are displayed in italics, as is the convention in linguistics. Best practice is to wrap inline examples in the `<i>` tag. Since inline examples are a kind of transcription, they display in a Unicode font by default.
+// Inline examples within prose are displayed in italics, as is the convention in linguistics. Best practice is to wrap inline examples in the `<i class=inex lang={ISO code}>` tag, and ensure that you include the correct ISO 639-3 code in the `lang` attribute. Since inline examples are a kind of transcription, they display in a Unicode font by default.
 //
 // Markup: inline.html
 //
