--- a/components/transcription/transcription.html
+++ b/components/transcription/transcription.html
@@ -1,2 +1,2 @@
-<p><span class=txn>łééchąąʼí</span> <q>dog</q></p>
-<p><span class=txn>łį́į́ʼ</span> <q>pet</q></p>
+<p><span class=txn lang=nav>łééchąąʼí</span> <q class=tln>dog</q></p>
+<p><span class=txn lang=nav>łį́į́ʼ</span> <q class=tln>pet</q></p>
