--- a/components/translation/translation.less
+++ b/components/translation/translation.less
@@ -8,14 +8,14 @@
 .tln,
 .translation {
 
-  quotes: none;
+  quotes: '‘' '’' '“' '”';
 
   &::before {
-    content: '‘';
+    content: open-quote;
   }
 
   &::after {
-    content: '’';
+    content: close-quote;
   }
 
 }
