add notes about lang attribute

--- a/components/transcription/transcription.less
+++ b/components/transcription/transcription.less
@@ -2,7 +2,7 @@
 
 // Transcription
 //
-// Any written representation of speech or sign.
+// Any written representation of speech or sign. Always be sure to include the `lang` attribute on transcriptions.
 //
 // Markup: transcription.html
 //
