CSS logical properties

--- a/components/example/example.less
+++ b/components/example/example.less
@@ -32,7 +32,8 @@
 // Styleguide components.example.source
 .ex-source {
 
-  float:   right;
+  float:   right; // fallback for inline-end
+  float:   inline-end;
   margin:  0em;
   padding: 0em;
 
