--- a/components/examples/examples.html
+++ b/components/examples/examples.html
@@ -58,4 +58,20 @@
 
   </li>
 
+  <li class=ex>
+    <p class=ex-header>Menominee (Algonquian)</p>
+    <ol class=subexamples>
+      <li><p><i class=txn lang=mez>pāpaehcen</i> <q class=tln>he, she, it (anim.) falls</q> (AI)</p></li>
+      <li><p><i class=txn lang=mez>pāpaehnaen</i> <q clas=translation>it (inan.) falls</q> (II)</p></li>
+    </ol>
+  </li>
+
+  <li class=ex>
+    <p class=ex-header>Menominee (Algonquian)</p>
+    <ol class=subexamples>
+      <li><p><i class=txn lang=mez>na͞ewa͞ew</i> <q class=tln>s/he sees him, her, it (anim.)</q> (TA)</p></li>
+      <li><p><i class=txn lang=mez>na͞emwah</i> <q class=tln>s/he sees it (inan.)</q> (TI)</p></li>
+    </ol>
+  </li>
+
 </ol>
